# SkyRL

./: .gitignore  CLAUDE.md  FUSED_LM_HEAD_PROFILE_REPORT.md  NEMOTRON3_NANO_DEBUG.md  PROGRESS_8k_offload.md  QWEN35_GDN_PACKING_NOTES.md  README.md  TRAINING_REPORT.md  pyproject.toml  retry.sh
skyrl/: .gitignore  env_vars.py  pyproject.toml
skyrl-tx/: README.md  pyproject.toml
skyrl-tx/tests/models/: conftest.py  lora_test_utils.py  test_deepseekv3.py  test_deepseekv3_lora_training.py  test_llama3_lora_training.py  test_models_common.py  test_qwen3.py  test_qwen3_lora_training.py
skyrl-tx/tests/tinker/: test_api_validation.py  test_engine.py  test_jax_backend.py  test_loss_fns.py
skyrl-tx/tests/utils/: test_generator.py  test_models.py  test_storage.py
skyrl-tx/tx/layers/: lora.py  stacked.py  util.py
skyrl-tx/tx/models/: configs.py  deepseekv3.py  llama3.py  qwen3.py  types.py
skyrl-tx/tx/tinker/: api.py  db_models.py  engine.py  loss_fns.py  types.py
skyrl-tx/tx/tinker/backends/: jax.py  skyrl_train.py
skyrl-tx/tx/utils/: generator.py  logits_processor.py  models.py  storage.py
skyrl/backends/: jax.py  ray_jax.py  renderer.py  skyrl_train_backend.py
skyrl/backends/skyrl_train/: env_vars.py  training_batch.py
skyrl/backends/skyrl_train/distributed/: dispatch.py  fsdp_strategy.py  fsdp_utils.py  strategy.py  utils.py
skyrl/backends/skyrl_train/distributed/megatron/: fused_linear_logprob_triton.py  megatron_strategy.py  megatron_utils.py  model_utils.py  optimizer.py  optimizer_dtype.py  packing_utils.py
skyrl/backends/skyrl_train/inference_engines/: base.py  inference_engine_client.py  inference_engine_client_http_endpoint.py  ray_wrapped_inference_engine.py  remote_inference_engine.py  utils.py
skyrl/backends/skyrl_train/inference_engines/vllm/: vllm_engine.py  vllm_server.py
skyrl/backends/skyrl_train/inference_servers/: base.py  engine_utils.py  layerwise_reload.py  new_inference_worker_wrap.py  protocols.py  remote_inference_client.py  render_server.py  router.py  server_group.py  server_pool.py  setup.py  spec_decode_utils.py  utils.py  vllm_router.py  vllm_server_actor.py  vllm_worker.py
skyrl/backends/skyrl_train/mtp/: __init__.py  adapter.py  grad_clip.py  hidden_capture.py  native_loss_patch.py  soft_ce.py
skyrl/backends/skyrl_train/patches/vllm/: kept_tokens.py
skyrl/backends/skyrl_train/utils/: off_policy_correction_utils.py  ppo_utils.py  profiler.py  replay_utils.py
skyrl/backends/skyrl_train/utils/io/: io.py
skyrl/backends/skyrl_train/weight_sync/: __init__.py  base.py  broadcast_strategy.py  cuda_ipc_strategy.py  transfer_strategy.py  vllm_ipc_engine.py  weight_extractor_utils.py  weight_loader.py
skyrl/backends/skyrl_train/workers/: model_wrapper.py  worker.py  worker_dispatch.py  worker_utils.py
skyrl/benchmarks/: bench_fused_linear_logprob.py  benchmark_engine.py  load_test_concurrency.py
skyrl/examples/gsm8k/: run_gsm8k.sh
skyrl/examples/train/gsm8k/: run_gsm8k.sh
skyrl/skyrl/backends/: jax.py  skyrl_train.py  skyrl_train_backend.py
skyrl/skyrl/skyrl_train/config/: __init__.py  config.py
skyrl/skyrl/skyrl_train/distributed/: dispatch.py  fsdp_strategy.py  fsdp_utils.py  strategy.py
skyrl/skyrl/skyrl_train/inference_engines/: base.py  inference_engine_client.py  inference_engine_client_http_endpoint.py  ray_wrapped_inference_engine.py  remote_inference_engine.py  utils.py
skyrl/skyrl/skyrl_train/inference_servers/: protocols.py  remote_inference_client.py  router.py  server_group.py  server_pool.py  utils.py  vllm_server_actor.py
skyrl/skyrl/skyrl_train/utils/: off_policy_correction_utils.py  ppo_utils.py  utils.py
skyrl/skyrl/skyrl_train/weight_sync/: __init__.py  broadcast_strategy.py  cuda_ipc_strategy.py  transfer_strategy.py  weight_extractor_utils.py  weight_loader.py
skyrl/skyrl/skyrl_train/workers/: model_wrapper.py  worker.py  worker_dispatch.py  worker_utils.py
skyrl/skyrl/tinker/: api.py  db_models.py  engine.py  loss_fns.py
skyrl/skyrl/train/: fully_async_trainer.py
skyrl/skyrl/train/entrypoints/: main_base.py  main_generate.py
skyrl/skyrl/train/utils/: __init__.py  utils.py
skyrl/skyrl/tx/layers/: layernorm.py  lora.py  stacked.py
skyrl/skyrl/tx/models/: deepseekv3.py  llama3.py  qwen3.py  types.py
skyrl/skyrl/tx/utils/: generator.py
skyrl/skyrl/utils/: generator.py  models.py
skyrl/tests/tinker/: test_api.py  test_engine.py
skyrl/tests/train/: util.py
skyrl/tests/train/dataset/: test_preprocess.py
skyrl/tests/train/generators/: chat_templating_test_constants.py  test_skyrl_gym_generator_chat_templating.py
skyrl/tests/tx/layers/: test_ragged_dot.py
skyrl/tests/tx/models/: lora_test_utils.py  test_deepseekv3_lora_training.py  test_llama3.py  test_models_common.py  test_qwen3.py  test_qwen3_config.py
skyrl/tests/tx/utils/: test_models.py
skyrl/tinker/: api.py  config.py  db_models.py  engine.py  loss_fns.py  types.py
skyrl/tinker/alembic/: env.py
skyrl/tinker/extra/: __init__.py  backend_forwarding_inference.py  external_inference.py  skyrl_train_inference_forwarding.py
skyrl/train/: evaluate.py  fully_async_trainer.py  fully_async_trainer_sim.py  main_sft.py  sft_trainer.py  trainer.py
skyrl/train/config/: __init__.py  config.py  ppo_base_config.yaml  sft_config.py  utils.py
skyrl/train/config/megatron_config/: policy.yaml
skyrl/train/dataset/: bin_packing.py  collators.py  dataset.py  preprocess.py  pretokenized.py  replay_buffer.py  samplers.py
skyrl/train/entrypoints/: main_base.py  main_generate.py  serve.py
skyrl/train/generators/: base.py  skyrl_gym_generator.py  skyrl_vlm_generator.py  utils.py
skyrl/train/utils/: callbacks.py  ray_gpu_monitor.py  ray_logging.py  tracking.py  trainer_utils.py  trajectory_logging.py  utils.py  vllm_metrics_scraper.py
skyrl/tx/layers/: lora.py  stacked.py
skyrl/tx/loaders/: __init__.py
skyrl/tx/models/: configs.py  deepseekv3.py  llama3.py  qwen3.py  qwen3_5.py  types.py
skyrl/tx/utils/: generator.py  logits_processor.py  models.py
skyrl/utils/: log.py  storage.py  tok.py  worker_setup.py
(+730 files in other folders)
