[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["skyrl*"]

[project]
name = "skyrl"
dynamic = ["version"]
description = "Unified API for training and inference"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "pillow>=11.3.0",
    "rich>=14.1.0",
    "safetensors>=0.6.2",
    "tokenizers>=0.21.2",
    "transformers>=5.0.0,<=5.3.0",
    "typer>=0.17.4",
    # "wandb>=0.22.0",
    "peft",
    "hf_transfer",
    "cloudpathlib>=0.23.0",
]

[project.optional-dependencies]
gpu = [
    "jax[cuda12]>=0.7.2; sys_platform == 'linux'",
]

tpu = [
    "jax[tpu]>=0.7.2; sys_platform == 'linux'",
]

tinker = [
    "tinker>=0.3.0",
    "fastapi[standard]",
    "sqlmodel",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "asyncpg",
    "psycopg2-binary",
]

aws = [
    "cloudpathlib[s3]",
]

gcp = [
    "cloudpathlib[gs]",
]

azure = [
    "cloudpathlib[azure]",
]

# The extras "jax", "fsdp", and "megatron" are the dependencies the
# engine needs for --backend="jax", --backend="fsdp", and --backend="megatron",
# respectively.

jax = [
    "jax>=0.8,<1.0",
    "flax>=0.12.2",
    "optax>=0.2.5",
]

skyrl-train = [
    "loguru",
    "tqdm",
    "ninja",
    "tensorboard",
    "func_timeout",
    "hydra-core==1.3.2",
    "accelerate",
    "torchdata",
    "omegaconf",
    "ray==2.51.1",
    "peft",
    "debugpy==1.8.0",
    "hf_transfer",
    "wandb",
    "datasets>=4.0.0",
    "tensordict",
    "jaxtyping",
    "skyrl-gym",
    "flash-attn==2.8.3; sys_platform == 'linux'",
    "polars",
    "s3fs",
    "fastapi",
    "uvicorn",
    "vllm-router; sys_platform == 'linux'",
    "pybind11",
    "setuptools",
    "nixl; sys_platform == 'linux'",
]

fsdp = [
    "skyrl[skyrl-train]",
    "vllm==0.20.0; sys_platform == 'linux'",
    "vllm-router; sys_platform == 'linux'",
    "nixl; sys_platform == 'linux'",
    "flash-linear-attention; sys_platform == 'linux'",
    "causal-conv1d; sys_platform == 'linux'",
    "flash-attn==2.8.3; sys_platform == 'linux'",
    "torch==2.11.0; sys_platform == 'linux'",
    "flashinfer-python==0.6.8.post1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "flashinfer-jit-cache==0.6.8.post1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "flashinfer-cubin==0.6.8.post1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchvision; sys_platform == 'linux'",
]

megatron = [
    "skyrl[skyrl-train]",
    "transformer-engine[pytorch]==2.11.0; sys_platform == 'linux'",
    "flash-attn==2.8.3; sys_platform == 'linux'",
    "flash-linear-attention; sys_platform == 'linux'",
    "causal-conv1d; sys_platform == 'linux'",
    "mamba-ssm>=2.3.0; sys_platform == 'linux'",
    "vllm==0.20.0; sys_platform == 'linux'",
    "vllm-router; sys_platform == 'linux'",
    "nixl; sys_platform == 'linux'",
    "torch==2.11.0; sys_platform == 'linux'",
    "flashinfer-python==0.6.8.post1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchvision; sys_platform == 'linux'",
    # megatron-bridge requires Python 3.12+; pin megatron-core to the same
    # constraint so both packages are consistently available (or absent).
    "megatron-bridge; sys_platform == 'linux' and python_version >= '3.12'",
    "megatron-core; sys_platform == 'linux' and python_version >= '3.12'",
    "flashinfer-jit-cache==0.6.8.post1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "flashinfer-cubin==0.6.8.post1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "nvidia-modelopt; sys_platform == 'linux'",
]

flashrl = [
    "skyrl[skyrl-train]",
    # NOTE: Custom vLLM wheel must be installed separately.
    # See examples/train/flash_rl/README.md for installation instructions.
    "flash-attn==2.8.3; sys_platform == 'linux'",
    "torch==2.7.0; sys_platform == 'linux'",
    "flashinfer-python; sys_platform == 'linux'",
    "torchvision; sys_platform == 'linux'",
]
miniswe = [
    "skyrl[skyrl-train]",
    # NOTE (sumanthrh): Needs to be a commit after https://github.com/SWE-agent/mini-swe-agent/commit/4f5d445e99d13b5482478c23508bf2fbf7c0670c
    "mini-swe-agent>=1.12.0",
    "litellm",
]
harbor = [
    "harbor[daytona,modal]; python_version >= '3.12'",
]

dev = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.7",
    "pytest",
    "pytest-forked",
    "pytest-asyncio",
    "pre-commit",
    "litellm",
    "torch",
    "ty",
    "cloudpathlib[s3]",
    "alembic",
    "griffe2md",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "skyrl.__version__"}

[project.scripts]
# The following is for supporting the skyrl-train dependency

[tool.uv]
# Resolve for both Linux (production) and macOS (dev)
required-environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

constraint-dependencies = [
    "flashinfer-jit-cache==0.6.8.post1",
    "flashinfer-cubin==0.6.8.post1",
]
# each backend should have separate dependencies that can potentially clash
# megatron also clashes with the jax dependency from gpu and tpu extras
conflicts = [
    [
        { extra = "jax" },
        { extra = "megatron" },
        { extra = "fsdp" },
        { extra = "flashrl" },
    ],
    [
        { extra = "megatron" },
        { extra = "gpu" },
        { extra = "tpu" },
        { extra = "flashrl" },
        { extra = "miniswe" },
    ]
]
# disable build isolation for megatron related dependencies
no-build-isolation-package = [
    "transformer-engine-torch",
    "transformer-engine",
    "nv-grouped-gemm",
    # causal-conv1d and mamba-ssm need to compile against torch 2.11 (no
    # upstream wheels yet); building with isolation would pin a different
    # torch in the build env than the runtime.
    "causal-conv1d",
    "mamba-ssm",
]
# override unnecessary dependencies and pin versions to override Megatron-Bridge
# unpinned dependencies.
override-dependencies = [
    "nvidia-resiliency-ext; sys_platform == 'never'",
    "transformer-engine[pytorch]==2.11.0; sys_platform == 'linux'",
    "transformers>=5.0.0,<=5.3.0; sys_platform == 'linux'",
    "megatron-core>=0.16.0; sys_platform == 'linux'",
    "ml_dtypes>=0.5.0; sys_platform == 'linux'",
]

[tool.uv.extra-build-dependencies]
flash-attn = [{requirement = "torch", match-runtime = true}]
transformer-engine = [{requirement = "torch", match-runtime = true}, "build_tools", "ninja"]
transformer-engine-torch = [{requirement = "torch", match-runtime = true}, "build_tools", "ninja"]
# causal-conv1d / mamba-ssm need torch + ninja in the build env (we run them
# with build isolation disabled but uv still uses extra-build-dependencies).
causal-conv1d = [{requirement = "torch", match-runtime = true}, "ninja", "packaging", "wheel", "setuptools"]
mamba-ssm = [{requirement = "torch", match-runtime = true}, "ninja", "packaging", "wheel", "setuptools"]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE"}

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "jax-tpu"
url = "https://storage.googleapis.com/jax-releases/libtpu_releases.html"

[[tool.uv.index]]
name = "flashinfer-cu128"
url = "https://flashinfer.ai/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "flashinfer-cu129"
url = "https://flashinfer.ai/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "vllm-cu129"
url = "https://wheels.vllm.ai/0.20.0/cu129"
explicit = true

[tool.uv.sources]
skyrl-gym = { path = "./skyrl-gym", editable = true }
# flashinfer-jit-cache 0.6.8 is only published against cu128 / cu129. Keep the
# cu128 index since torch is also cu128 here.
flashinfer-jit-cache = { index = "flashinfer-cu128", marker = "sys_platform == 'linux'" }
# vllm 0.20.0 PyPI wheel is built against CUDA 13 (libcudart.so.13). The system
# has CUDA 12.9 with torch 2.11+cu129, so use the cu129 wheel from the vllm
# wheels index (not on PyPI).
vllm = [
    { index = "vllm-cu129", marker = "sys_platform == 'linux'" },
]
# NOTE (overnight 2026-04-30): bumped to torch 2.11 so vllm 0.20.0 install
# resolves cleanly. There are no upstream torch-2.11 wheels for causal-conv1d
# or mamba-ssm yet, so those build from source against torch 2.11. Keep the
# flash-attn URL pinned to the lesj0610 fork's torch-2.11 wheel.
flash-attn = { url = "https://github.com/lesj0610/flash-attention/releases/download/v2.8.3-cu12-torch2.11/flash_attn-2.8.3%2Bcu12torch2.11cxx11abiTRUE-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux' and python_version == '3.12' and platform_machine == 'x86_64'" }
# Use CUDA torch on Linux, CPU torch on macOS (must match skyrl-train config).
# Stay on the cu128 index because torch 2.11+cu128 exists there and the
# flashrl extra requires torch 2.7 (only on cu128). The vllm 0.20 wheel pulled
# from cu129 still loads against cu12 libcudart.so.12 supplied by torch+cu128.
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
harbor = { git = "https://github.com/laude-institute/harbor", rev = "a85628c803dc1713fcd26d2bb1908cde69d62317" }
megatron-bridge = {git = "https://github.com/NVIDIA-NeMo/Megatron-Bridge", rev = "8382dc343b07b068a827ca20bae860633df3baa0", marker = "sys_platform == 'linux'"}
# megatron-core dev branch: https://github.com/NVIDIA/Megatron-LM/tree/dev latest as of 4/1/26
megatron-core = {git = "https://github.com/NVIDIA/Megatron-LM", rev = "4ef64ebc468cd3da41a22d46a2db37163694e8e2", marker = "sys_platform == 'linux'"}

[tool.black]
line-length = 120
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 120
max-doc-length = 120
extend-ignore = [
    # Default ignored errors by flake8
    "E121", "E123", "E126", "E226", "E24", "E704",
    # F401 module imported but unused
    "F401",
    # E203 whitespace before ':' (conflict with black)
    "E203",
    # E231 missing whitespace after ',' (conflict with black)
    "E231",
    # E501 line too long (conflict with black)
    "E501",
    # E741 do not use variables named 'l', 'O', or 'I'
    "E741",
    # W503 line break before binary operator (conflict with black)
    "W503",
    # W504 line break after binary operator (conflict with black)
    "W504",
    # W505 doc line too long (conflict with black)
    "W505",
    # W605 invalid escape sequence 'x' (conflict with latex within docs)
    "W605",
]

[tool.ruff]
exclude = [
    "skyrl-agent/",
    "examples/",
]

[tool.ruff.lint]
extend-select = ["I"]
ignore = [
    "F722" # Syntax error in annotation - ignored because this doesn't play well with jaxtyping
]

[tool.ruff.lint.isort]
known-first-party = ["skyrl", "skyrl_gym"]

